--- a/src/html/_slider.html
+++ b/src/html/_slider.html
@@ -10,8 +10,10 @@
                         <img class="home-slider__img home-slider__img-mobile" src="img/home-slider__mobile.jpg" alt="img">
                         <div class="home-slider__content">
                             <h3 class="home-slider__title">НОВОГОДНИЕ СУПЕРЦЕНЫ</h3>
-                            <p class="home-slider__desc">6-31 декабря</p>
-                            <span class="home-slider__tag">-50% скидки</span>
+                            <div class="home-slider__content-inner">
+                                <p class="home-slider__desc">6-31 декабря</p>
+                                <span class="home-slider__tag">-50% скидки</span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide home-slider__item">
@@ -19,8 +21,10 @@
                         <img class="home-slider__img home-slider__img-mobile" src="img/home-slider__mobile.jpg" alt="img">
                         <div class="home-slider__content">
                             <h3 class="home-slider__title">НОВОГОДНИЕ СУПЕРЦЕНЫ</h3>
-                            <p class="home-slider__desc">6-31 декабря</p>
-                            <span class="home-slider__tag">-50% скидки</span>
+                            <div class="home-slider__content-inner">
+                                <p class="home-slider__desc">6-31 декабря</p>
+                                <span class="home-slider__tag">-50% скидки</span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide home-slider__item">
@@ -28,8 +32,10 @@
                         <img class="home-slider__img home-slider__img-mobile" src="img/home-slider__mobile.jpg" alt="img">
                         <div class="home-slider__content">
                             <h3 class="home-slider__title">НОВОГОДНИЕ СУПЕРЦЕНЫ</h3>
-                            <p class="home-slider__desc">6-31 декабря</p>
-                            <span class="home-slider__tag">-50% скидки</span>
+                            <div class="home-slider__content-inner">
+                                <p class="home-slider__desc">6-31 декабря</p>
+                                <span class="home-slider__tag">-50% скидки</span>
+                            </div>
                         </div>
                     </div>
                 </div>
