--- a/src/html/_products-2.html
+++ b/src/html/_products-2.html
@@ -17,7 +17,11 @@
                         <h3 class="products-item__title">
                             <a href="#">Стул Eames DSW White</a>
                         </h3>
-                        <p class="products-item__price">Цена:  <span>2090 руб.</span></p>
+                        <p class="products-item__price">
+                            Цена:  <span>2090 руб.</span>
+                            <br>
+                            <span class="old-price">10200 руб.</span>
+                        </p>
                     </div>
                     <!--  Products Item end -->
 
@@ -32,7 +36,11 @@
                         <h3 class="products-item__title">
                             <a href="#">СТУЛ ВЕНСКИЙ КОМФОРТ с жестким сиденьем</a>
                         </h3>
-                        <p class="products-item__price"> Цена:  <span> 4250 руб.</span></p>
+                        <p class="products-item__price">
+                            Цена:  <span> 4250 руб.</span>
+                            <br>
+                            <span class="old-price">10200 руб.</span>
+                        </p>
                     </div>
                     <!--  Products Item end -->
 
@@ -48,7 +56,13 @@
                         <h3 class="products-item__title">
                             <a href="#">Стул Венский А-18 орех</a>
                         </h3>
-                        <p class="products-item__price"> Цена:  <span> 10269 руб.</span></p>
+                        <p class="products-item__price"> Цена:
+                            <span> 10269 руб.</span>
+                            <br>
+                            <span class="old-price">10200 руб.</span>
+
+                        </p>
+
                     </div>
                     <!--  Products Item end -->
 
@@ -65,7 +79,8 @@
                             <a href="#">Cтул Венский Uranus из массива бука, светлый орех</a>
                         </h3>
                         <p class="products-item__price"> Цена:  <span>7800 руб.</span>
-                            <!--                        <span class="old-price">10200 руб.</span>-->
+                            <br>
+                                                    <span class="old-price">10200 руб.</span>
                         </p>
                     </div>
                     <!--  Products Item end -->
