--- a/src/filter.html
+++ b/src/filter.html
@@ -35,7 +35,7 @@
                     <div class="categories__item">
                         <a class="categories__link js-animate" href="https://vsestulya.ru/c/stulya-dlya-posetiteley">
                             <div class="categories__picture">
-                                <img src="/img/category/category-1.webp"
+                                <img src="img/category/category-1.webp"
                                      alt="Стулья для посетителей"></div>
                             <div class="categories__caption js-animate-caption">
                                 <span class="categories__caption-text">Стулья для посетителей </span>
@@ -45,7 +45,7 @@
                     <div class="categories__item">
                         <a class="categories__link js-animate" href="https://vsestulya.ru/c/plastikovye-stulya">
                             <div class="categories__picture">
-                                <img src="/img/category/category-2.webp"
+                                <img src="img/category/category-2.webp"
                                      alt="Пластиковые стулья">
                             </div>
                             <div class="categories__caption js-animate-caption">
@@ -56,7 +56,7 @@
                     <div class="categories__item">
                         <a class="categories__link js-animate" href="https://vsestulya.ru/c/venskie-stulya">
                             <div class="categories__picture">
-                                <img src="/img/category/category-3.webp"
+                                <img src="img/category/category-3.webp"
                                      alt="Венские стулья">
                             </div>
                             <div class="categories__caption js-animate-caption">
@@ -67,7 +67,7 @@
                     <div class="categories__item">
                         <a class="categories__link js-animate" href="https://vsestulya.ru/c/laboratornye-stulya-1">
                             <div class="categories__picture">
-                                <img src="/img/category/category-4.webp"
+                                <img src="img/category/category-4.webp"
                                      alt="Лабораторные стулья">
                             </div>
                             <div class="categories__caption js-animate-caption">
@@ -78,7 +78,7 @@
                     <div class="categories__item">
                         <a class="categories__link js-animate" href="https://vsestulya.ru/c/stulya-na-polozyah">
                             <div class="categories__picture">
-                                <img src="/img/category/category-5.webp"
+                                <img src="img/category/category-5.webp"
                                      alt="Стулья на полозьях">
                             </div>
                             <div class="categories__caption js-animate-caption">
@@ -89,7 +89,7 @@
                     <div class="categories__item">
                         <a class="categories__link js-animate" href="https://vsestulya.ru/c/skladnye-stulya">
                             <div class="categories__picture">
-                                <img src="/img/category/category-6.webp"
+                                <img src="img/category/category-6.webp"
                                      alt="Складные стулья">
                             </div>
                             <div class="categories__caption js-animate-caption">
@@ -100,7 +100,7 @@
                     <div class="categories__item">
                         <a class="categories__link js-animate" href="https://vsestulya.ru/c/stulya/derevyannye-stulya">
                             <div class="categories__picture">
-                                <img src="/img/category/category-7.webp"
+                                <img src="img/category/category-7.webp"
                                      alt="Деревянные стулья">
                             </div>
                             <div class="categories__caption js-animate-caption">
@@ -135,6 +135,24 @@
                                     оптом</a>
                             </li>
                         </ul>
+                    </div>
+                    <div class="filter__slider">
+                        <div class="mileage-group">
+                            <span class="filter-item__name">Цена</span>
+                            <div class="filter__slider-inner">
+                                <div class="filter__slider-null"></div>
+                                <div class="input">
+                                    <input type="number" id="startmiles">
+                                </div>
+                                <div class="filter__slider-null">-</div>
+
+                                <div class="input">
+                                    <input type="number" id="endmiles">
+                                </div>
+                                <div class="filter__slider-null"> руб.</div>
+                            </div>
+                            <div id="slider-range" data-max="71000" data-min="650"></div>
+                        </div>
                     </div>
                     <div class="filter-list">
                         <div class="filter-item">
