--- a/src/html/_products-1.html
+++ b/src/html/_products-1.html
@@ -1,5 +1,5 @@
 <!--  Products start -->
-<div class="products products-first">
+<div class="products products-first text-center">
     <div class="wrapper">
         <div class="products-title h2 text-center">САМЫЕ ПОПУЛЯРНЫЕ</div>
         <div class="products-inner">
@@ -17,7 +17,7 @@
                         <h3 class="products-item__title">
                             <a href="#">Стул Eames DSW White</a>
                         </h3>
-                        <p class="products-item__price">Цена:  <span>2090 руб.</span></p>
+                        <p class="products-item__price products-item__price-small">Цена:  <span>2090 руб.</span></p>
                     </div>
                     <!--  Products Item end -->
 
@@ -32,7 +32,7 @@
                         <h3 class="products-item__title">
                             <a href="#">СТУЛ ВЕНСКИЙ КОМФОРТ с жестким сиденьем</a>
                         </h3>
-                        <p class="products-item__price"> Цена:  <span> 4250 руб.</span></p>
+                        <p class="products-item__price products-item__price-small"> Цена:  <span> 4250 руб.</span></p>
                     </div>
                     <!--  Products Item end -->
 
@@ -48,7 +48,7 @@
                         <h3 class="products-item__title">
                             <a href="#">Стул Венский А-18 орех</a>
                         </h3>
-                        <p class="products-item__price"> Цена:  <span> 10269 руб.</span></p>
+                        <p class="products-item__price products-item__price-small"> Цена:  <span> 10269 руб.</span></p>
                     </div>
                     <!--  Products Item end -->
 
@@ -64,7 +64,7 @@
                         <h3 class="products-item__title">
                             <a href="#">Cтул Венский Uranus из массива бука, светлый орех</a>
                         </h3>
-                        <p class="products-item__price"> Цена:  <span>7800 руб.</span>
+                        <p class="products-item__price products-item__price-small"> Цена:  <span>7800 руб.</span>
                             <!--                        <span class="old-price">10200 руб.</span>-->
                         </p>
                     </div>
