--- a/src/html/_products-2.html
+++ b/src/html/_products-2.html
@@ -1,5 +1,5 @@
 <!--  Products start -->
-<div class="products">
+<div class="products text-center">
     <div class="wrapper">
         <div class="products-title h2 text-center">АКЦИИ  /  СКИДКИ</div>
         <div class="products-inner">
@@ -17,7 +17,7 @@
                         <h3 class="products-item__title">
                             <a href="#">Стул Eames DSW White</a>
                         </h3>
-                        <p class="products-item__price">
+                        <p class="products-item__price products-item__price-small">
                             Цена:  <span>2090 руб.</span>
                             <br>
                             <span class="old-price">10200 руб.</span>
@@ -36,7 +36,7 @@
                         <h3 class="products-item__title">
                             <a href="#">СТУЛ ВЕНСКИЙ КОМФОРТ с жестким сиденьем</a>
                         </h3>
-                        <p class="products-item__price">
+                        <p class="products-item__price products-item__price-small">
                             Цена:  <span> 4250 руб.</span>
                             <br>
                             <span class="old-price">10200 руб.</span>
@@ -56,7 +56,7 @@
                         <h3 class="products-item__title">
                             <a href="#">Стул Венский А-18 орех</a>
                         </h3>
-                        <p class="products-item__price"> Цена:
+                        <p class="products-item__price products-item__price-small"> Цена:
                             <span> 10269 руб.</span>
                             <br>
                             <span class="old-price">10200 руб.</span>
@@ -78,7 +78,7 @@
                         <h3 class="products-item__title">
                             <a href="#">Cтул Венский Uranus из массива бука, светлый орех</a>
                         </h3>
-                        <p class="products-item__price"> Цена:  <span>7800 руб.</span>
+                        <p class="products-item__price products-item__price-small"> Цена:  <span>7800 руб.</span>
                             <br>
                                                     <span class="old-price">10200 руб.</span>
                         </p>
