--- a/src/filter.html
+++ b/src/filter.html
@@ -974,7 +974,7 @@
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <a href="#" class="products-item__img">
-                                                <img src="/img/product-1.png"
+                                                <img src="img/product-1.png"
                                                      alt="products">
                                             </a>
                                         </div>
@@ -1155,7 +1155,7 @@
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <a href="#" class="products-item__img">
-                                                <img src="/img/product-1.png"
+                                                <img src="img/product-1.png"
                                                      alt="products">
                                             </a>
                                         </div>
@@ -1336,7 +1336,7 @@
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <a href="#" class="products-item__img">
-                                                <img src="/img/product-1.png"
+                                                <img src="img/product-1.png"
                                                      alt="products">
                                             </a>
                                         </div>
@@ -1517,7 +1517,7 @@
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <a href="#" class="products-item__img">
-                                                <img src="/img/product-1.png"
+                                                <img src="img/product-1.png"
                                                      alt="products">
                                             </a>
                                         </div>
@@ -1698,7 +1698,7 @@
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <a href="#" class="products-item__img">
-                                                <img src="/img/product-1.png"
+                                                <img src="img/product-1.png"
                                                      alt="products">
                                             </a>
                                         </div>
@@ -1879,7 +1879,7 @@
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <a href="#" class="products-item__img">
-                                                <img src="/img/product-1.png"
+                                                <img src="img/product-1.png"
                                                      alt="products">
                                             </a>
                                         </div>
