--- a/src/filter.html
+++ b/src/filter.html
@@ -50,7 +50,9 @@
                         <a class="categories__link js-animate" href="https://vsestulya.ru/c/stulya-dlya-posetiteley">
                             <div class="categories__picture">
                                 <img src="img/category/category-1.webp"
-                                     alt="Стулья для посетителей"></div>
+                                     alt="Стулья для посетителей">
+                                <img src="https://vsestulya.ru/image/catalog/category-color/Stulyadlyaposetitelej.png"
+                                     alt="Стулья для посетителей" class="categories__picture-hover"></div>
                             <div class="categories__caption js-animate-caption">
                                 <span class="categories__caption-text">Стулья для посетителей </span>
                             </div>
@@ -61,6 +63,8 @@
                             <div class="categories__picture">
                                 <img src="img/category/category-2.webp"
                                      alt="Пластиковые стулья">
+                                <img src="https://vsestulya.ru/image/catalog/category-color/Stulyadlyaposetitelej.png"
+                                     alt="Стулья для посетителей" class="categories__picture-hover">
                             </div>
                             <div class="categories__caption js-animate-caption">
                                 <span class="categories__caption-text">Пластиковые стулья </span>
@@ -72,6 +76,8 @@
                             <div class="categories__picture">
                                 <img src="img/category/category-3.webp"
                                      alt="Венские стулья">
+                                <img src="https://vsestulya.ru/image/catalog/category-color/Stulyadlyaposetitelej.png"
+                                     alt="Стулья для посетителей" class="categories__picture-hover">
                             </div>
                             <div class="categories__caption js-animate-caption">
                                 <span class="categories__caption-text">Венские стулья </span>
@@ -83,6 +89,8 @@
                             <div class="categories__picture">
                                 <img src="img/category/category-4.webp"
                                      alt="Лабораторные стулья">
+                                <img src="https://vsestulya.ru/image/catalog/category-color/Stulyadlyaposetitelej.png"
+                                     alt="Стулья для посетителей" class="categories__picture-hover">
                             </div>
                             <div class="categories__caption js-animate-caption">
                                 <span class="categories__caption-text">Лабораторные стулья </span>
@@ -94,6 +102,8 @@
                             <div class="categories__picture">
                                 <img src="img/category/category-5.webp"
                                      alt="Стулья на полозьях">
+                                <img src="https://vsestulya.ru/image/catalog/category-color/Stulyadlyaposetitelej.png"
+                                     alt="Стулья для посетителей" class="categories__picture-hover">
                             </div>
                             <div class="categories__caption js-animate-caption">
                                 <span class="categories__caption-text">Стулья на полозьях </span>
@@ -105,6 +115,8 @@
                             <div class="categories__picture">
                                 <img src="img/category/category-6.webp"
                                      alt="Складные стулья">
+                                <img src="https://vsestulya.ru/image/catalog/category-color/Stulyadlyaposetitelej.png"
+                                     alt="Стулья для посетителей" class="categories__picture-hover">
                             </div>
                             <div class="categories__caption js-animate-caption">
                                 <span class="categories__caption-text">Складные стулья </span>
@@ -116,6 +128,8 @@
                             <div class="categories__picture">
                                 <img src="img/category/category-7.webp"
                                      alt="Деревянные стулья">
+                                <img src="https://vsestulya.ru/image/catalog/category-color/Stulyadlyaposetitelej.png"
+                                     alt="Стулья для посетителей" class="categories__picture-hover">
                             </div>
                             <div class="categories__caption js-animate-caption">
                                 <span class="categories__caption-text">Деревянные стулья </span>
