--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -2326,6 +2326,26 @@
         </div>
     </div>
 </div>
+<div class="modal modal-city modal-city__user" id="modal-user">
+    <div class="modal__container modal-city__container">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+                <span>×</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form action="#" class="data-callback">
+                <h3 class="text-center">БЫСТРЫЙ ЗАКАЗ <br>
+                    СТУЛ EAMES DSW WHITE
+                </h3>
+                <input type="text" placeholder="* Имя" name="name">
+                <input type="text" placeholder="* Телефон" name="name">
+                <input type="text" placeholder="E-Mail" name="name">
+                <button type="button" class="btn contact-send">Отправить заказ</button>
+            </form>
+        </div>
+    </div>
+</div>
 <div class="modal modal-city modal-search" id="modal-search">
     <div class="modal__container modal-city__container">
         <div class="modal-header">
