--- a/src/product-2.html
+++ b/src/product-2.html
@@ -283,15 +283,19 @@
                         </div>
                         <div class="product-single__body-right__price-two">
                             <div class="product-single__body-right__price-two__count">
-                                <div class="product-count" data-count="1" data-max="23">
+                                <div class="product-count" data-count="1" data-max="0">
                                     <div class="product-count__item product-count__minus">-</div>
-                                    <div class="product-count__text">1</div>
+                                    <div class="product-count__text">0</div>
                                     <div class="product-count__item product-count__plus">+</div>
                                 </div>
-                                <div class="product-single__body-right__price-two__count--text">Доступно 23 шт.</div>
+                                <div class="product-single__body-right__price-two__count--text">Доступно 0 шт.</div>
                             </div>
-                            <div class="btn">В КОРЗИНУ</div>
-                            <div class="btn btn-solid open__modal" data-modal="#modal-user">Купить в 1 клик</div>
+                            <input type="email" placeholder="Ваш Email">
+                            <div class="btn btn-notification">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0753 14.2L15.0003 13.125V8.95833C15.0003 6.4 13.6336 4.25833 11.2503 3.69167V3.125C11.2503 2.43333 10.692 1.875 10.0003 1.875C9.30862 1.875 8.75029 2.43333 8.75029 3.125V3.69167C6.35862 4.25833 5.00029 6.39167 5.00029 8.95833V13.125L3.92529 14.2C3.40029 14.725 3.76695 15.625 4.50862 15.625H15.4836C16.2336 15.625 16.6003 14.725 16.0753 14.2ZM6.66696 13.9583V8.95833C6.66696 6.89167 7.92529 5.20833 10.0003 5.20833C12.0753 5.20833 13.3336 6.89167 13.3336 8.95833V13.9583H6.66696ZM11.667 16.4583C11.667 17.375 10.917 18.125 10.0003 18.125C9.07529 18.125 8.33362 17.375 8.33362 16.4583H11.667Z" fill="#F2994A"/>
+                                </svg>
+                                Подписаться</div>
                         </div>
                     </div>
                     <div class="product-single__body-right-item">
