--- a/src/product.html
+++ b/src/product.html
@@ -1414,7 +1414,7 @@
                                     <div class="feedback-star-line__count">1</div>
                                 </div>
                             </div>
-                            <button class="feedback-btn btn">Оставить отзыв</button>
+                            <button class="feedback-btn btn open__modal" data-modal="#modal-review">Оставить отзыв</button>
                         </div>
                     </div>
                 </div>
