--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -2386,19 +2386,19 @@
                     Общая оценка
                     <div class="feedback-star__header-stars">
                         <div data-star="1" class="feedback-star__header-star change-star">
-                            <img src="/img/icon/star-active.svg" alt="star">
+                            <img src="img/icon/star-active.svg" alt="star">
                         </div>
                         <div data-star="2" class="feedback-star__header-star change-star">
-                            <img src="/img/icon/star-active.svg" alt="star">
+                            <img src="img/icon/star-active.svg" alt="star">
                         </div>
                         <div data-star="3" class="feedback-star__header-star change-star">
-                            <img src="/img/icon/star-active.svg" alt="star">
+                            <img src="img/icon/star-active.svg" alt="star">
                         </div>
                         <div data-star="4" class="feedback-star__header-star change-star">
-                            <img src="/img/icon/star-active.svg" alt="star">
+                            <img src="img/icon/star-active.svg" alt="star">
                         </div>
                         <div data-star="5" class="feedback-star__header-star change-star">
-                            <img src="/img/icon/star-active.svg" alt="star">
+                            <img src="img/icon/star-active.svg" alt="star">
                         </div>
                     </div>
 
