--- a/src/product.html
+++ b/src/product.html
@@ -310,7 +310,7 @@
                                 </div>
                                 <div class="product-single__body-right__price-two__count--text">Доступно 23 шт.</div>
                             </div>
-                            <div class="btn">В КОРЗИНУ</div>
+                            <div class="btn product-single__body-right__price-two-send" data-send="1">В КОРЗИНУ</div>
                             <div class="btn btn-solid open__modal" data-modal="#modal-user">Купить в 1 клик</div>
                         </div>
                     </div>
