--- a/src/html/_head.html
+++ b/src/html/_head.html
@@ -8,7 +8,7 @@
     <title> @@title - Название проекта </title>
     <link rel="stylesheet" href="./css/style.min.css">
     <meta name="description" content="@@description">
-    <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
 </head>
 
 <body class="main__body">
