add contacts page

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -27,50 +27,46 @@
 
                 </div>
                 <div class="contact-methods__item">
-                    <div class="contact-methods__phone-tag">(по России)</div>
+                    <div class="contact-methods__phone-tag">Москва</div>
                     <a class="contact-methods__phone" href="tel:+74995003880" target="_blank">8 499 500 38 80</a>
                     <div class="contact-methods__phone-time">Режим работы: 09:00 – 18:00</div>
                 </div>
                 <div class="contact-methods__item">
-                    <div class="contact-methods__phone-tag">(по России)</div>
+                    <div class="contact-methods__phone-tag">Санкт-Петербург</div>
                     <a class="contact-methods__phone" href="tel:+78123132607" target="_blank">+7 (812) 313 26 07</a>
                     <div class="contact-methods__phone-time">Режим работы: 09:00 – 18:00</div>
 
                 </div>
                 <div class="contact-methods__item">
-                    <div class="contact-methods__phone-tag">(по России)</div>
+                    <div class="contact-methods__phone-tag">Новосибирск</div>
                     <a class="contact-methods__phone" href="tel:+73832018361" target="_blank">+7 (383) 201 83 61</a>
 
                     <div class="contact-methods__phone-time">Режим работы: 09:00 – 18:00</div>
 
                 </div>
                 <div class="contact-methods__item">
-                    <div class="contact-methods__phone-tag">(по России)</div>
+                    <div class="contact-methods__phone-tag">Липецк</div>
                     <a class="contact-methods__phone" href="tel:+74742575088" target="_blank">+7 (474) 257 50 88</a>
 
                     <div class="contact-methods__phone-time">Режим работы: 09:00 – 18:00</div>
 
                 </div>
                 <div class="contact-methods__item">
-                    <div class="contact-methods__phone-tag">(по России)</div>
+                    <div class="contact-methods__phone-tag">Владимир</div>
                     <a class="contact-methods__phone" href="tel:+74922494889" target="_blank">+7 (492) 249 48 89</a>
                     <div class="contact-methods__phone-time">Режим работы: 09:00 – 18:00</div>
                 </div>
                 <div class="contact-methods__item">
-                    <div class="contact-methods__phone-tag">(по России)</div>
+                    <div class="contact-methods__phone-tag">Воронеж</div>
                     <a class="contact-methods__phone" href="tel:+74732111201" target="_blank">+7 (473) 211 12 01</a>
                     <div class="contact-methods__phone-time">Режим работы: 09:00 – 18:00</div>
                 </div>
                 <div class="contact-methods__item">
-                    <div class="contact-methods__phone-tag">(по России)</div>
+                    <div class="contact-methods__phone-tag">Нижний Новгород</div>
                     <a class="contact-methods__phone" href="tel:+78312666639" target="_blank">+7 (831) 266 66 39</a>
                     <div class="contact-methods__phone-time">Режим работы: 09:00 – 18:00</div>
                 </div>
-                <div class="contact-methods__item">
-                    <div class="contact-methods__phone-tag">(по России)</div>
-                    <a class="contact-methods__phone" href="tel:+77273122339" target="_blank">+7 (727) 312 23 39</a>
-                    <div class="contact-methods__phone-time">Режим работы: 09:00 – 18:00</div>
-                </div>
+
             </div>
             <h3 class="contact-methods__subtittle">Отдел рекламации:</h3>
             <div class="contact-methods__list">
