--- a/src/stat-postavshchikom.html
+++ b/src/stat-postavshchikom.html
@@ -16,12 +16,7 @@
             Стать поставщиком</h1>
 
         <div class="editor">
-
-
-
-
-
-            <section class="supplier">
+            <div class="supplier">
                 <div class="supplier__container">
                     <div class="supplier__header">
                         <div class="supplier__header-col"><span class="supplier__h2">Ознакомьтесь с договором</span> <a class="supplier__header-link supplier__header-link--download" href="../Dogovor_marketplace_v.11082022.docx">Скачать (148 Кб)</a></div>
@@ -57,7 +52,7 @@
                     <div class="supplier__container supplier__container--form supplier__container--border-bottom"><span class="supplier__h2">Загрузите документы</span> <label class="supplier__label supplier__label--file"> <span class="supplier__label-title"><em class="supplier__requered">*</em>Приказ или решение о назначении директора</span> <span class="supplier__label-content"><em class="supplier__add-file">+</em>Прикрепить файл (.png, .jpg, ,jpeg, .pdf)</span> <input class="supplier__label-field" accept=".jpg, .jpeg, .png, .pdf" name="file_directors" type="file"> </label> <label class="supplier__label supplier__label--file"> <span class="supplier__label-title"><em class="supplier__requered">*</em>Устав организации</span> <span class="supplier__label-content"><em class="supplier__add-file">+</em>Прикрепить файл (.png, .jpg, ,jpeg, .pdf)</span> <input class="supplier__label-field" accept=".jpg, .jpeg, .png, .pdf" name="file_statut" type="file"> </label> <label class="supplier__label supplier__label--file"> <span class="supplier__label-title">Доверенность</span> <span class="supplier__label-content"><em class="supplier__add-file">+</em>Прикрепить файл (.png, .jpg, ,jpeg, .pdf)</span> <input class="supplier__label-field" accept=".jpg, .jpeg, .png, .pdf" name="file_proxy" type="file"> </label> <label class="supplier__label supplier__label--file"> <span class="supplier__label-title"><em class="supplier__requered">*</em>Уведомление или свидетельство о регистрации для ООО (и прочих юр. лиц)</span> <span class="supplier__label-content"><em class="supplier__add-file">+</em>Прикрепить файл (.png, .jpg, ,jpeg, .pdf)</span> <input class="supplier__label-field" accept=".jpg, .jpeg, .png, .pdf" name="file_registration_firm" type="file"> </label></div>
                     <label class="supplier__label supplier__label--checkbox"> <input class="supplier__label-checkbox" name="accept_user_relations" type="checkbox"><span class="supplier__label-text">Согласен с условиями <a class="agree" href="index.php?route=information/information/agree&amp;information_id=3" target="_blank" rel="noopener">пользовательского соглашения</a></span> </label> <label class="supplier__label supplier__label--checkbox" style="margin-top: 0;"> <input class="supplier__label-checkbox" name="accept_ofert" type="checkbox"><span class="supplier__label-text">С условиями <a class="agree" href="index.php?route=information/information/agree&amp;information_id=34" target="_blank" rel="noopener">оферты</a> ознакомлен</span> </label>
                     <p>Принимая условие оферты, вы отправляете запрос на активацию личного кабинета</p>
-                    <button class="btn btn--transparent" type="submit">Принять условия оферты</button></form></section>
+                    <button class="btn btn--transparent" type="submit">Принять условия оферты</button></form></div>
 
         </div>
 
