--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -2296,6 +2296,65 @@
         </div>
     </div>
 </div>
+<div class="modal modal-bag modal-auth" id="account-menu">
+    <div class="modal__container modal-bag__container modal-auth__container">
+        <div class="cart-popup__top">
+            <span class="close cart-popup__close js-cart-close">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                  <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+              </svg>
+            </span>
+            <span class="cart-popup__title js-cart-title text-center">
+                <span class="js-cart-items">Меню</span>
+            </span>
+        </div>
+        <div class="cart-popup_bottom js-cart-bottom">
+            <div class="popup__submenu-scroll">
+                <div class="nav-submenu nav-submenu--sidebar">
+                    <ul class="nav-submenu__list">
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/login">Вход</a>
+                        </li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/create-account">Регистрация</a>
+                        </li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/forgot-password">Забыли
+                            пароль?</a></li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/my-account">Моя
+                            информация</a></li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/address-book">Адресная
+                            книга</a></li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/wishlist">Закладки</a>
+                        </li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/order-history">История
+                            заказов</a></li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/downloads">Файлы
+                            для скачивания</a></li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/recurring">Регулярные
+                            платежи</a></li>
+                        <!--<li class="nav-submenu__list-item"><a class="nav-submenu__link" href="https://vsestulya.ru/reward-points" >Бонусные баллы</a></li> -->
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/returns">Возвраты</a>
+                        </li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/transactions">История
+                            транзакций</a></li>
+                        <li class="nav-submenu__list-item"><a class="nav-submenu__link"
+                                                              href="https://vsestulya.ru/newsletter">E-Mail
+                            рассылка</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="modal modal-city" id="modal-city">
     <div class="modal__container modal-city__container">
         <div class="modal-header">
